--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <a name="useful-buttons" class="anchor" href="#useful-buttons"><span class="octicon octicon-link"></span></a>Useful buttons</h2>
 
 <ul>
-<li><a href='javascript: $(".root-pane").hide();$(".files").width("100%");$(".container").width("100%");'>Wider Gist Button</a></li>
+<li><a href='javascript: $(".root-pane").hide();$(".files").width("100%");$(".container").width("100%");'>Wider Gist</a></li>
 </ul>
         </section>
 
