--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 
         <section id="main_content">
           <h2>
-<a name="useful-buttons" class="anchor" href="#useful-buttons"><span class="octicon octicon-link"></span></a>Useful buttons</h2>
+<a name="useful-buttons" class="anchor" href="#useful-buttons"><span class="octicon octicon-link"></span></a>Useful Bookmarks</h2>
 
 <ul>
-<li><a href='javascript: $(".root-pane").hide();$(".files").width("100%");$(".container").width("100%");'>Wider Gist</a></li>
+<li><a href='javascript: $(".root-pane").hide();$(".files").width("100%");$(".container").width("100%");'>Wider Gist Button</a></li>
 </ul>
         </section>
 
